when the client adds real content to the pdf-block links, there are more words than designed for. This makes the arrow overlap the text in certain screen sizes. Add a margin left to the arrow icon so it never overlaps, and increase the min width of the whole box to stop the arrow from dropping down on a new line.

--- a/wp-content/themes/sydneytheme/src/sass/pdf-block.scss
+++ b/wp-content/themes/sydneytheme/src/sass/pdf-block.scss
@@ -79,6 +79,7 @@
             position: relative;
             right: 8px;
             float: right;
+            margin-left: 30px;
 
             @include breakpoint(desktop) {
                 height: 21px;
@@ -91,7 +92,7 @@
 
     &__left-box {
         max-width: 472px;
-        min-width: 270px;
+        min-width: 310px;
 
         @include breakpoint(tablet) {
             max-width: 285px;
